--- a/fpx.html
+++ b/fpx.html
@@ -73,7 +73,7 @@
   </head>
   <body>
     <main>
-      <a href="homepage.html">Go back to homepage</a>
+      <a href="index.html">Go back to homepage</a>
 
       <h1>FPX</h1>
 
