--- a/service.html
+++ b/service.html
@@ -113,7 +113,7 @@ footer {
 </head>
 <body>
   <header>
-    <a href="homepage.html">
+    <a href="index.html">
       <h1><span class="brand-name">Essential</span></h1>
     </a>
   </header>
