--- a/shopessence.html
+++ b/shopessence.html
@@ -165,7 +165,7 @@
 
 <body>
     <header>
-        <a href="homepage.html">
+        <a href="index.html">
             <h1><span class="brand-name">Essential</span></h1>
         </a>
     </header>
