--- a/Melaleuca Alternifolia.html
+++ b/Melaleuca Alternifolia.html
@@ -120,7 +120,7 @@
 </head>
 <body>
     <header>
-        <a href="homepage.html">
+        <a href="index.html">
             <h1><span class="brand-name">Essential</span></h1>
         </a>
     </header>
