--- a/Thank you.html
+++ b/Thank you.html
@@ -25,7 +25,7 @@
     <h1>Thank You for Your Payment!</h1>
     <p>We appreciate your business and the payment you have made. If you have any questions or concerns, feel free to contact us.</p>
     <main>
-      <a href="homepage.html">Go back to homepage</a>
+      <a href="index.html">Go back to homepage</a>
 </main>
 </body>
 </html>
