--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="header-content">
-      <h1 class="title"><a href="homepage.html" style="text-decoration: none; color: white;">Essential</a></h1>
+      <h1 class="title"><a href="index.html" style="text-decoration: none; color: white;">Essential</a></h1>
     </div>
   </header>
 
