--- a/blue tansy.html
+++ b/blue tansy.html
@@ -123,7 +123,7 @@
 <body>
     <header>
         <div class="header">
-            <a href="homepage.html">
+            <a href="index.html">
                 <h1>Essential</h1>
             </a>
         </div>
